# prototyping

./: .gitignore  CMakeLists.txt  settings.cmake
3dparty/: CMakeLists.txt
3dparty/basic_demo/: CMakeLists.txt
3dparty/btogre/: CMakeLists.txt
3dparty/btogre/demo/: main.cpp
3dparty/bullet-2.87/: CMakeLists.txt
3dparty/libnoise/examples/: CMakeLists.txt
3dparty/libnoise/noiseutils/: CMakeLists.txt
3dparty/libnoise/src/: CMakeLists.txt
3dparty/lua-5.1.5/: CMakeLists.txt
3dparty/oggsound/: CMakeLists.txt
3dparty/oggsound/include/: OgreOggISound.h  OgreOggListener.h
3dparty/oggsound/src/: OgreOggISound.cpp  OgreOggListener.cpp  OgreOggSoundManager.cpp  OgreOggStaticSound.cpp  OgreOggStaticWavSound.cpp  OgreOggStreamSound.cpp  OgreOggStreamWavSound.cpp
3dparty/ogre_game_kit/: CMakeLists.txt
3dparty/ogre_game_kit/common/: OGKCamera.cpp  OGKCamera.h  OGKConsole.cpp  OGKConsole.h  OGKCutScene.cpp  OGKCutScene.h  OGKGame.cpp  OGKGame.h  OGKInGameScene.cpp  OGKInGameScene.h  OGKInputManager.cpp  OGKInputManager.h  OGKMenuScene.cpp  OGKMenuScene.h  OGKPlayer.cpp  OGKPlayer.h  OGKScene.cpp  OGKScene.h  OGKSceneManager.cpp  OGKSceneManager.h  OGKTerrain.cpp  OGKTerrain.h
3dparty/ogreimgui/: CMakeLists.txt  ImguiManager.cpp  ImguiRenderable.h
3dparty/tinyxml2/: CMakeLists.txt
3dparty/urho-project-template/script/: cmake_generic.sh
bullet_world/: CMakeLists.txt
bullet_world/irrbullet/: CMakeLists.txt
bullet_world/irrbullet/src/: irrBulletKinematicCharacterController.cpp
bullet_world/src/: bullet_body.h  bullet_world.cpp  bullet_world.h
config_reader/: CMakeLists.txt
config_reader/src/: config_reader.cpp  config_reader.h
docs/: links.txt  (+1 more)
icosphere/: CMakeLists.txt
icosphere/src/: icosphere.cpp  icosphere.h  icosphere_asynch.cpp  icosphere_asynch.h  main.cpp  main.cpp.save  manual_sphere.cpp  manual_sphere.h  sphere_cam_ctrl.cpp  sphere_cam_ctrl.h  sphere_source.cpp  sphere_source.h
material_viewer/: CMakeLists.txt
material_viewer/src/: main.cpp  mat_utils.cpp  state.h  state_intro.cpp  state_intro.h  state_manager.cpp  state_manager.h
simple/: CMakeLists.txt
simple/src/: main.cpp
states_exploring/: CMakeLists.txt
states_exploring/3dparty/: OgreText.h  ogre_sprites.cpp
states_exploring/media/: main.lua
states_exploring/media/cube/: cube.blend
states_exploring/media/plane/: Plane.mesh  Plane.mesh.xml  plane.blend
states_exploring/media/sphere/: Icosphere.mesh  Material.001.material  sphere.blend  sphere.blend1
states_exploring/resources/cube/: M_Cube.material
states_exploring/resources/lua/: panel.lua
states_exploring/resources/pivot_marker/: M_PivotMarker.material  PivotMarker.mesh  PivotMarker.mesh.xml  pivot_marker.blend1
states_exploring/resources/pod/: M_Pod.material  Pod.mesh  Pod.mesh.xml
states_exploring/resources/sphere/: Icosphere.mesh.xml  MaterialSphere.material  Sphere.material  sphere.blend1
states_exploring/resources/surface/: surface.blend  surface.blend1
states_exploring/resources/test_ship/: TestShip.mesh  TestShip.mesh.xml
states_exploring/src/: air_mesh.cpp  air_mesh.h  camera_ctrl.cpp  camera_ctrl.h  entity_factory.cpp  entity_factory.h  entity_part.cpp  entity_part.h  entity_planet.cpp  entity_planet.h  entity_world.cpp  entity_world.h  lua_camera.cpp  lua_camera.h  lua_collision_shapes.cpp  lua_collision_shapes.h  lua_entity_part.cpp  lua_entity_part.h  lua_entity_world.cpp  lua_state_manager.cpp  lua_utils.cpp  lua_utils.h  main.cpp  part_desc.cpp  part_desc.h  state_design.cpp  state_design.h  state_game.cpp  state_game.h  state_intro.cpp  state_intro.h  state_manager.cpp  state_manager.h  state_workshop.cpp  state_workshop.h
states_exploring/src/3dparty/: ogre2d_manager.cpp  ogre2d_manager.h  ogre_sprites.h
states_exploring/src/air_dynamics/: air_mesh.cpp  air_mesh.h
states_exploring/src/bindings/: lua_camera.cpp  lua_collision_shapes.cpp  lua_entity_part.cpp  lua_entity_world.cpp  lua_state_manager.cpp  lua_tech_tree.cpp  lua_utils.cpp
states_exploring/src/camera/: camera_ctrl.cpp  camera_ctrl.h
states_exploring/src/design_descs/: group_item.h  part_desc.h  tech_tree.cpp  tech_tree.h
states_exploring/src/designs/: assemblies_manager.cpp  assemblies_manager.h  assembly.cpp  assembly.h  design.cpp  design.h
states_exploring/src/entity_base/: dynamics_world.cpp  dynamics_world.h  entity.cpp  entity.h  entity_factory.cpp  entity_factory.h  entity_part.cpp  entity_part.h  entity_planet.cpp  entity_planet.h  entity_world.cpp  entity_world.h  part_manager_base.cpp  part_manager_base.h  planet_manager_base.cpp  planet_manager_base.h
states_exploring/src/entity_impl/: entity_part.cpp  entity_part.h  entity_planet.cpp  entity_planet.h  entity_test_planet.cpp  entity_test_planet.h  part_manager_test.cpp  part_manager_test.h  planet_manager_test.cpp  planet_manager_test.h  site_manager_test.cpp  site_manager_test.h  solar_system_test.cpp  solar_system_test.h
states_exploring/src/launch_site/: launch_site.cpp  launch_site.h  launch_site_manager_base.cpp  launch_site_manager_base.h
states_exploring/src/panel_constructor/: group_item.h  part_desc.cpp  part_desc.h
states_exploring/src/player/: player.cpp  player.h  player_local.cpp  player_local.h
states_exploring/src/sites/: site.cpp  site.h  site_manager_base.cpp  site_manager_base.h
states_exploring/src/state_game/: state_game.cpp  state_game.h
states_exploring/src/state_intro/: state_intro.cpp
states_exploring/src/state_workshop/: design_construction.cpp  design_construction.h  design_construction_input.cpp  design_manager.cpp  design_manager.h  pivot_marker.cpp  pivot_marker.h  state_workshop.cpp  state_workshop.h  tech_tree_panel.cpp  tech_tree_panel.h
states_exploring/src/states_base/: state.cpp  state_manager.cpp  state_manager.h
tests/dynamics/: CMakeLists.txt
u3d_template/: CMakeLists.txt
u3d_template/3dparty/: CMakeLists.txt
u3d_template/Source/: BaseApplication.cpp  BaseLevel.cpp  Global.h  LevelManager.cpp  LevelManager.h  MyEvents.h
u3d_template/docs/: calculations.wxmx  rv_to_elems.m  solve_newton.py
(+236 files in other folders)
