
add_subdirectory( "./libnoise" )
add_subdirectory( "./bullet-2.87" )
add_subdirectory( "./ogreimgui" )
add_subdirectory( "./btogre" )
add_subdirectory( "./basic_demo" )
add_subdirectory( "./lua-5.1.5" )
add_subdirectory( "./oggsound" )
add_subdirectory( "./lemon-1.3.1" )
add_subdirectory( "./tinyxml2" )
#add_subdirectory( "./ogre_game_kit" )



